src/bootstrap/test/v0_8/rejects/06_operator_mixed_types/main.zg
# requires: v0.17
import "math/big"

a := big.from_int(7)
b := 7
print (a + b).to_str()
